k8s/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-chat-app
  labels:
    app: redis-chat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis-chat-app
  template:
    metadata:
      labels:
        app: redis-chat-app
    spec:
      containers:
      - name: redis-chat-app
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
