k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-chat-app
labels:
  app: redis-chat-app
spec:
  selector:
    matchLabels:
      app: redis-chat-app
  type: ClusterIp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
