k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-chat-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  IngressClassName: nginx
  rules:
  - host: redis-chat-local
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: chatfrontend-service
            port:
              number: 8000
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: chatbackend-service
            port:
              number: 5000
      - path: /redis
        pathType: Prefix
        backend:
          service:
            name: redis-service
            port:
              number: 6379
---
